Refactoring & cleaning